tests/parser/error/block_order_2.c
void main() {
    int a;
    a=2;
    if (a) {}
    int a;
}